--- a/production/styles/Home.module.css
+++ b/production/styles/Home.module.css
@@ -108,9 +108,17 @@
   margin-left: 0.5rem;
 }
 
-@media (max-width: 600px) {
-  .grid {
+
+@media screen and (max-width :360px){
+  .container0{
     width: 100%;
-    flex-direction: column;
   }
+  .container1{
+    width:100%;
+  }
+
+  .container3{
+    width:100%;
+  }
+  
 }
