--- a/production/styles/globals.css
+++ b/production/styles/globals.css
@@ -1,9 +1,10 @@
 html,
 body {
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -34,25 +35,37 @@ a {
 }
 
 .Container{
+  width: 100%;
+  max-width: 1320px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr ;
   
 }
 .container1{
   display: grid;
-  background-color: aqua;
+  background-color: rgb(235, 196, 124);
   grid-template-columns: 1fr 1fr 1fr ;
   align-self: center;
-  
-  
 }
-/*
+.name{
+  align-self: center;
+  justify-content: center;
+}
+/*Media quiries*/
 
-@media screen and(max-width :480px){
-  .Image{
-    grid-column: span 6;
+@media screen and (max-width :360px){
+  .container0{
+    width: 100%;
+  }
+  .container1{
+    width:100%;
   }
 
+  .container3{
+    width:100%;
+  }
+  
+
 }
-  */
+
 
