--- a/production/styles/globals.css
+++ b/production/styles/globals.css
@@ -16,21 +16,37 @@ a {
   box-sizing: border-box;
 }
 .button {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: #FF6600;
   border-radius: 20px;
   width: 258px;
   height: 40px;
-  border: solid 2px orange;
 }
 .button1{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   color:orange;
-  font-size: 20px;
-  font-weight: 100;
   text-align: center;
-  border: solid 2px orange;
+  border: solid 2px #FF6600;
   border-radius: 50px;
+  width: 258px;
+  height: 40px;
+
+ 
+}
+.box{
+  width: 320px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  margin: 20px;
+}
+.box.btn
+
+.card {
+  background-color: whitesmoke;
+  border-radius: 8px;
+  width: 306px;
+  height: 256px;
+  text-align: center;
 
 }
 
@@ -38,18 +54,56 @@ a {
   width: 100%;
   max-width: 1320px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr ;
-  
+  grid-template-columns: 1fr 2fr 1fr ;
+  grid-gap: 2px;
 }
 .container1{
+  background-color: rgb(255, 255, 255,0);
+  width: 526px;
+  height: 40px;
   display: grid;
-  background-color: rgb(235, 196, 124);
-  grid-template-columns: 1fr 1fr 1fr ;
-  align-self: center;
-}
-.name{
-  align-self: center;
+  grid-template-columns: 1fr 2fr 2fr ;
   justify-content: center;
+  align-content: center;
+}
+.inc{
+  background-color: rgba(255, 255, 255, 0);
+  box-shadow: inset 0 1px 0 0 #E6E7EB, inset 0 -1px 0 0 #E6E7EB;
+  width: 200px;
+  height: 400px;
+  justify-content: center;
+  align-content: center;
+}
+
+
+.name{
+  color: #333333;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 24px;
+  width: 526px;
+  text-align: left;
+}
+.star{
+  width: 242px;
+  height: 16px;
+  
+}
+.txt{
+  color: #FF6600;
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  
+  
+}
+.txt1{
+  color: black;
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
 }
 /*Media quiries*/
 
