--- a/production/styles/globals.css
+++ b/production/styles/globals.css
@@ -20,6 +20,14 @@ a {
   border-radius: 20px;
   width: 258px;
   height: 40px;
+  padding: 6px;
+  align-self: center;
+}
+.button:hover,
+.button:focus,
+.button:active {
+  color: rgb(187, 184, 184);
+  box-shadow: 2px 2px 8px  hsl(29, 100%, 48%);
 }
 .button1{
   color:orange;
@@ -28,9 +36,17 @@ a {
   border-radius: 50px;
   width: 258px;
   height: 40px;
-
- 
+  align-self: center;
+  padding: 6px;
+  align-self: center;
 }
+.button1:hover,
+.button1:focus,
+.button1:active {
+  color: rgb(187, 184, 184);
+  box-shadow: 2px 2px 8px  hsl(29, 100%, 48%);
+}
+
 .box{
   width: 320px;
   display: flex;
@@ -39,43 +55,67 @@ a {
   padding: 10px;
   margin: 20px;
 }
-.box.btn
-
-.card {
-  background-color: whitesmoke;
-  border-radius: 8px;
-  width: 306px;
-  height: 256px;
-  text-align: center;
-
-}
 
 .Container{
   width: 100%;
   max-width: 1320px;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr ;
-  grid-gap: 2px;
+  grid-gap: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  justify-content: center;
+}
+.container0{
+  align-self: center;
 }
 .container1{
-  background-color: rgb(255, 255, 255,0);
+  background-color: pink;
   width: 526px;
   height: 40px;
-  display: grid;
-  grid-template-columns: 1fr 2fr 2fr ;
-  justify-content: center;
-  align-content: center;
-}
-.inc{
-  background-color: rgba(255, 255, 255, 0);
-  box-shadow: inset 0 1px 0 0 #E6E7EB, inset 0 -1px 0 0 #E6E7EB;
-  width: 200px;
-  height: 400px;
   justify-content: center;
   align-content: center;
 }
 
+.container2{
+  margin-top: 50px;
+}
+.container3{
+  margin-top: 50px;
+  align-items: center;
+  align-content: center;
+}
+.checkout{
+  background-color: white;
+  border-radius: 8px;
+  width: 306px;
+  height: 256px;
+  text-align: center;
+  border-bottom: 2px solid whitesmoke;
+  border-left:2px solid whitesmoke ;
+  border-right: 2px solid whitesmoke;
+  align-self: center;
+  display: block;
+  
+  justify-content: center;
+  
+}
+.checkout:hover,
+.checkout:focus,
+.checkout:active {
+  color: hsl(29, 100%, 48%);
+  box-shadow: 2px 2px 8px  hsl(29, 100%, 48%); 
+}
 
+.footer{
+  color: rgb(187, 184, 184);
+}
+
+.line{
+  text-decoration: line-through;
+  color: rgb(187, 184, 184);
+  font-size: 13px;
+}
 .name{
   color: #333333;
   font-family: Roboto;
@@ -83,6 +123,11 @@ a {
   line-height: 24px;
   width: 526px;
   text-align: left;
+  
+}
+.mid-sec{
+  border-top: solid 2px whitesmoke;
+  border-bottom: solid 2px whitesmoke;
 }
 .star{
   width: 242px;
@@ -90,6 +135,7 @@ a {
   
 }
 .txt{
+  margin-top: 6px;
   color: #FF6600;
   font-family: Roboto;
   font-size: 14px;
@@ -99,24 +145,64 @@ a {
   
 }
 .txt1{
+  margin-top: 6px;
   color:white;
   font-family: Roboto;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
 }
+.qty{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 5px;
+}
+.qty .btn{
+  width: 30px;
+  height: 30px;
+  border: solid 1px rgb(214, 211, 211);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.btn:hover,
+.btn:focus,
+.btn:active {
+  color: hsl(29, 100%, 48%);
+  border-color: hsl(29, 100%, 48%);
+ 
+}
+.qty input{
+  width: 70px;
+  height: 30px;
+  border: solid 1px rgb(214, 211, 211);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: rgb(158, 153, 153);
+}
+.quantity{
+  margin-top: 20px;
+}
 /*Media quiries*/
 
 @media screen and (max-width :360px){
   .container0{
-    width: 100%;
+    grid-column: span 12;
   }
-  .container1{
-    width:100%;
+  .container2{
+    grid-column: span 12;
   }
 
   .container3{
-    width:100%;
+    grid-column: span 12;
+  }
+
+  .container3 checkout{
+    grid-column: span 6;
   }
   
 
