--- a/production/styles/globals.css
+++ b/production/styles/globals.css
@@ -96,6 +96,8 @@ a {
   border-right: 2px solid whitesmoke;
   align-self: center;
   display: block;
+  font-size: 14px;
+  color:rgb(187, 184, 184) ;
   
   justify-content: center;
   
