--- a/production/styles/globals.css
+++ b/production/styles/globals.css
@@ -55,7 +55,10 @@ a {
   padding: 10px;
   margin: 20px;
 }
-
+.cart{
+  margin-top: 10px;
+  color: rgb(187, 184, 184);
+}
 .Container{
   width: 100%;
   max-width: 1320px;
@@ -78,7 +81,9 @@ a {
 }
 
 .container2{
-  margin-top: 50px;
+  margin-top: 48px;
+  width: 526px;
+  height: 544px;
 }
 .container3{
   margin-top: 50px;
@@ -129,8 +134,9 @@ a {
   
 }
 .mid-sec{
-  border-top: solid 2px whitesmoke;
-  border-bottom: solid 2px whitesmoke;
+  box-shadow: inset 0 1px 0 0 #E6E7EB, inset 0 -1px 0 0 #E6E7EB;
+  width: 526px;
+  height: 64px;
 }
 .star{
   width: 242px;
@@ -154,6 +160,13 @@ a {
   font-size: 14px;
   line-height: 20px;
   text-align: center;
+}
+.price-s{
+  color: #FF6600;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: left;
 }
 .qty{
   display: flex;
@@ -188,8 +201,27 @@ a {
   color: rgb(158, 153, 153);
 }
 .quantity{
+  width: 526px;
+  height: 144px;
   margin-top: 20px;
+  display: grid;
+  grid-template-columns: 11fr 1fr 1fr 1fr;
+  justify-content: flex-start;
+  grid-template-rows:1fr 1fr 1fr 1fr ;
 }
+.ready{
+  background-color:rgb(196, 48, 48);
+  border-radius: 2px 0 0 2px;
+  width: 90px;
+  height: 20px;
+  font-size: 12px;
+  color: #FFFFFF;
+  font-family: Roboto;
+  line-height: 16px;
+  text-align: left;
+
+}
+
 /*Media quiries*/
 
 @media screen and (max-width :360px){
