--- a/production/styles/globals.css
+++ b/production/styles/globals.css
@@ -190,7 +190,7 @@ a {
   border-color: hsl(29, 100%, 48%);
  
 }
-.qty input{
+.count{
   width: 70px;
   height: 30px;
   border: solid 1px rgb(214, 211, 211);
