--- a/production/styles/globals.css
+++ b/production/styles/globals.css
@@ -81,6 +81,7 @@ a {
 }
 
 .container2{
+  display: block;
   margin-top: 48px;
   width: 526px;
   height: 544px;
@@ -169,12 +170,11 @@ a {
   text-align: left;
 }
 .qty{
-  display: flex;
   align-items: center;
   justify-content: flex-end;
   padding: 5px;
 }
-.qty .btn{
+.butto{
   width: 30px;
   height: 30px;
   border: solid 1px rgb(214, 211, 211);
@@ -182,6 +182,7 @@ a {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  background-color: #E6E7EB;
 }
 .btn:hover,
 .btn:focus,
@@ -204,10 +205,13 @@ a {
   width: 526px;
   height: 144px;
   margin-top: 20px;
-  display: grid;
-  grid-template-columns: 11fr 1fr 1fr 1fr;
-  justify-content: flex-start;
-  grid-template-rows:1fr 1fr 1fr 1fr ;
+  
+  
+  
+  
+}
+.tool:hover::after{
+  content:attr(data-tooltip);
 }
 .ready{
   background-color:rgb(196, 48, 48);
